--- a/lezione 9 - Bordi/index.html
+++ b/lezione 9 - Bordi/index.html
@@ -15,7 +15,8 @@
     
 <body class="p-10">
 
-    <div class="w-[300px] h-[300px] bg-slate-200 border-red-50">bella</div>
+    <div class="w-[150px] h-[150px] bg-slate-200 rounded-2xl"></div>
+    <div class="w-[150px] h-[150px] bg-slate-200 rounded-2xl"></div>
 
 
 
