--- a/lezione 9 - Bordi/index.html
+++ b/lezione 9 - Bordi/index.html
@@ -15,8 +15,42 @@
     
 <body class="p-10">
 
-    <div class="w-[150px] h-[150px] bg-slate-200 rounded-2xl"></div>
-    <div class="w-[150px] h-[150px] bg-slate-200 rounded-2xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 rounded-2xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-400 border-4 border-red-400 rounded-xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 border-y-4 border-red-400 rounded-xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-400 border-x-4 border-red-400 rounded-xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 border-r-4 border-red-400 rounded-br-xl rounded-tl-xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-400 border-4 border-red-400 border-dashed"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 border-4 border-red-400 border-double"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-400 border-4 border-red-400 border-none"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 border-4 border-red-400 border-hidden"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 border-4 border-red-400 rounded-full"></div>
+
+    <div class="my-4 grid grid-cols-3 divide-x-4">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    <div class="my-4 grid grid-cols-3 divide-x-4 divide-transparent">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    <div class="my-4 grid grid-cols-3 divide-x-4 divide-solid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    <div class="my-4 grid grid-cols-3 divide-x-4 divide-dotted">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
+
+    
 
 
 
