--- a/lezione 9 - Bordi/index.html
+++ b/lezione 9 - Bordi/index.html
@@ -50,7 +50,11 @@
         <div>3</div>
     </div>
 
-    
+    <button class="my-4 70px bg-slate-500 outline">Cliccami</button>
+    <br>
+
+    <button class="my-4 70px bg-slate-500 ring-4">Cliccami</button>
+
 
 
 
