--- a/lezione 9 - Bordi/index.html
+++ b/lezione 9 - Bordi/index.html
@@ -53,7 +53,24 @@
     <button class="my-4 70px bg-slate-500 outline">Cliccami</button>
     <br>
 
+    <button class="my-4 70px bg-slate-500 outline outline-8">Cliccami</button>
+    <br>
+
+    <button class="my-4 70px bg-slate-500 outline outline-offset-8">Cliccami</button>
+    <br>
+
+    <button class="my-4 70px bg-slate-500 outline outline-offset-4">Cliccami</button>
+    <br>
+
+    <button class="my-4 70px bg-slate-500 outline outline-8 outline-offset-8 outline-red-400">Cliccami</button>
+    <br>
+
+    <button class="my-4 70px bg-slate-500 outline outline-offset-8">Cliccami</button>
+    <br>
+
     <button class="my-4 70px bg-slate-500 ring-4">Cliccami</button>
+
+    
 
 
 
