--- a/lezione 10 - Proprietà di Layout/index.html
+++ b/lezione 10 - Proprietà di Layout/index.html
@@ -16,6 +16,7 @@
 <body class="p-10">
 
     <div class="my-4 w-[80px] h-[80px] bg-slate-200 rounded-2xl"></div>
+    <div class="my-4 w-[80px] h-[80px] bg-slate-200 rounded-2xl"></div>
 
 
 
