--- a/lezione 10 - Proprietà di Layout/index.html
+++ b/lezione 10 - Proprietà di Layout/index.html
@@ -15,8 +15,14 @@
     
 <body class="p-10">
 
-    <div class="my-4 w-[80px] h-[80px] bg-slate-200 rounded-2xl"></div>
-    <div class="my-4 w-[80px] h-[80px] bg-slate-200 rounded-2xl"></div>
+    <div class="columns-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
+    <br>
+
+    <div class="columns-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
+    <br>
+
+    <div class="columns-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
+    <br>
 
 
 
