--- a/lezione 11 - Flex/index.html
+++ b/lezione 11 - Flex/index.html
@@ -15,47 +15,12 @@
     
 <body class="p-10">
 
-    <div class="columns-3 text-xs">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
-    <br>
+    <div class="columns-3 text-xs">
 
-    <div class="columns-6 text-xs">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
-    <br>
-
-    <div class="columns-4 text-xs">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa unde delectus, esse quod reiciendis consequuntur possimus placeat cumque iure neque voluptatibus totam recusandae, quasi voluptatem similique repellat. Sapiente explicabo officia voluptate nobis laudantium expedita. Aliquam minus debitis asperiores itaque cumque sit fugiat voluptatum nobis. Explicabo doloremque vel voluptates soluta earum ullam labore quisquam molestiae sint quibusdam maiores, reprehenderit, fuga quo nemo. Reiciendis dolore in quae blanditiis doloremque ea facilis qui. Repellat nobis qui laudantium fugiat saepe vel, nam reiciendis. Explicabo nihil nemo consequatur natus, ullam suscipit quasi corporis! Voluptatem iste totam autem minus error dolor laborum, dolorem neque consequatur laboriosam.</div>
-    <br>
-
-    <!-- NB: hidden è letteralmente display:none -->
-    <div class="bg-slate-500 w-20 h-20 hidden"></div>
-    <!-- NB: hidden è letteralmente display:none -->
-    <br>
-
-    <div class="flex mb-4">
-
-        <div class="m-2 bg-slate-500 w-[200px] h-[200px] overflow-auto">
-            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas modi, cumque aliquam illum beatae molestiae tempora non repellat nam deleniti perspiciatis minus facere at ex cupiditate quo, adipisci architecto vero pariatur dolores alias cum, officia magnam delectus. Fugiat, ipsum ea! Fugiat illum voluptate quod fugit facere at eius nam delectus aliquid consequuntur minus tenetur aliquam, iusto maiores! Totam corporis quia laborum. Excepturi non quia sunt ea tempora quae animi laborum ipsum doloremque in ut impedit, repellendus nemo, hic quas accusamus quisquam? Dolores ipsam nisi debitis quia consequuntur exercitationem quibusdam pariatur iure error provident omnis cupiditate dolor aspernatur, quod nam ab?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            </p>
-        </div>
-
-        <div class="m-2 bg-slate-500 w-[200px] h-[200px] overflow-hidden">
-            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas modi, cumque aliquam illum beatae molestiae tempora non repellat nam deleniti perspiciatis minus facere at ex cupiditate quo, adipisci architecto vero pariatur dolores alias cum, officia magnam delectus. Fugiat, ipsum ea! Fugiat illum voluptate quod fugit facere at eius nam delectus aliquid consequuntur minus tenetur aliquam, iusto maiores! Totam corporis quia laborum. Excepturi non quia sunt ea tempora quae animi laborum ipsum doloremque in ut impedit, repellendus nemo, hic quas accusamus quisquam? Dolores ipsam nisi debitis quia consequuntur exercitationem quibusdam pariatur iure error provident omnis cupiditate dolor aspernatur, quod nam ab?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            </p>
-        </div>
-
-        <div class="m-2 bg-slate-500 w-[200px] h-[200px] overflow-scroll">
-            <p class="text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas modi, cumque aliquam illum beatae molestiae tempora non repellat nam deleniti perspiciatis minus facere at ex cupiditate quo, adipisci architecto vero pariatur dolores alias cum, officia magnam delectus. Fugiat, ipsum ea! Fugiat illum voluptate quod fugit facere at eius nam delectus aliquid consequuntur minus tenetur aliquam, iusto maiores! Totam corporis quia laborum. Excepturi non quia sunt ea tempora quae animi laborum ipsum doloremque in ut impedit, repellendus nemo, hic quas accusamus quisquam? Dolores ipsam nisi debitis quia consequuntur exercitationem quibusdam pariatur iure error provident omnis cupiditate dolor aspernatur, quod nam ab?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            </p>
-        </div>
-
+        bellaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        
     </div>
-
-    <div class="m-2 bg-slate-300 w-[200px] h-[200px]">
-        <p class="absolute text-xs bg-slate-400 -z-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas modi, cumque aliquam illum beatae molestiae tempora non repellat nam deleniti perspiciatis minus facere at ex cupiditate quo, adipisci architecto vero pariatur dolores alias cum, officia magnam delectus. Fugiat, ipsum ea! Fugiat illum voluptate quod fugit facere at eius nam delectus aliquid consequuntur minus tenetur aliquam, iusto maiores! Totam corporis quia laborum. Excepturi non quia sunt ea tempora quae animi laborum ipsum doloremque in ut impedit, repellendus nemo, hic quas accusamus quisquam? Dolores ipsam nisi debitis quia consequuntur exercitationem quibusdam pariatur iure error provident omnis cupiditate dolor aspernatur, quod nam ab?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        </p>
-    </div>
+    <br>
 
 
 
