--- a/lezione 11 - Flex/index.html
+++ b/lezione 11 - Flex/index.html
@@ -13,12 +13,82 @@
 
 </head>
     
-<body class="p-10">
+<body class="">
 
-    <div class="columns-3 text-xs">
+    <div class="flex bg-slate-200 h-30 gap-4">
 
-        bellaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-        
+        <div class="p-10 bg-slate-400 border border-slate-700">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">4</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 justify-evenly">
+
+        <div class="p-10 bg-slate-400 border border-slate-700">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">4</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 justify-around">
+
+        <div class="p-10 bg-slate-400 border border-slate-700">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">4</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 justify-between">
+
+        <div class="p-10 bg-slate-400 border border-slate-700">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">4</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 flex-wrap">
+
+        <div class="p-10 bg-slate-400 border border-slate-700">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">4</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">5</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">6</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">7</div>
+        <div class="p-10 bg-slate-400 border border-slate-700">8</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 justify-around">
+
+        <div class="p-10 bg-slate-400 border border-slate-700 order-4">1</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 order-5">2</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 order-1">3</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 order-2">4</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 order-3">5</div>
+
+    </div>
+    <br>
+
+    <div class="flex bg-slate-200 h-30 justify-between">
+
+        <!-- flex-none (no grow-shrink) [grow -> crescere] [shrink -> rimpicciolire/restringere] -->
+        <div class="p-10 bg-slate-400 border border-slate-700 basis-60 flex-none">flex-none</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 basis-96 flex-shrink">shrink</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 basis-10 flex-auto">grow & shrink</div>
+        <!-- <div class="p-10 bg-slate-400 border border-slate-700 order-2">4</div>
+        <div class="p-10 bg-slate-400 border border-slate-700 order-3">5</div> -->
+
     </div>
     <br>
 
