--- a/lezione 14 - Modificatori e Pseudoclassi/index.html
+++ b/lezione 14 - Modificatori e Pseudoclassi/index.html
@@ -13,21 +13,34 @@
 
 </head>
     
-<body>
+<body class="p-10">
 
-    <div class="text-center flex flex-col">
+    <div class="p-10 bg-slate-200 hover:bg-red-400"></div>
+    <br>
 
-        <div class="p-10 bg-slate-200 border border-slate-500">1</div>
-        <div class="p-10 bg-slate-200 border border-slate-500">2</div>
-        <div class="p-10 bg-slate-200 border border-slate-500">3</div>
-        <div class="p-10 bg-slate-200 border border-slate-500">4</div>
-        <div class="p-10 bg-slate-200 border border-slate-500">5</div>
+    <input type="text" class="mb-4 border border-black focus:bg-red-400">
+    <br>
 
-    </div>
+    <button class="mb-5 py-2 px-4 active:bg-blue-400 border border-black">cliccami</button>
+    <br>
+
+    <ul>
+        <li class="bg-slate-300 p-5 even:bg-green-500 odd:bg-green-300">1</li>
+        <li class="bg-slate-300 p-5 even:bg-green-500 odd:bg-green-300">2</li>
+        <li class="bg-slate-300 p-5 even:bg-green-500 odd:bg-green-300">3</li>
+        <li class="bg-slate-300 p-5 even:bg-green-500 odd:bg-green-300">4</li>
+        <li class="bg-slate-300 p-5 even:bg-green-500 odd:bg-green-300">5</li>
+    </ul>
+
+    <p class="mt-5 p-10 empty:bg-red-400">cose</p>
+    <p class="mb-5 p-10 empty:bg-red-400"></p>
+
+    <button disabled class="disabled:bg-red-200 mb-5 py-2 px-4 border border-black">cliccami</button>
+    <button class="mb-5 py-2 px-4 active:bg-blue-400 border border-black">cliccami</button>
     <br>
 
 
-hggvkghvkvkvv
+
 
 
 </body>
