--- a/lezione 14 - Modificatori e Pseudoclassi/index.html
+++ b/lezione 14 - Modificatori e Pseudoclassi/index.html
@@ -39,6 +39,37 @@
     <button class="mb-5 py-2 px-4 active:bg-blue-400 border border-black">cliccami</button>
     <br>
 
+    <ul class="group">
+        <li class="bg-slate-300 p-5 group-hover:bg-green-400">1</li>
+        <li class="bg-slate-300 p-5">2</li>
+        <li class="bg-slate-300 p-5">3</li>
+        <li class="bg-slate-300 p-5">4</li>
+        <li class="bg-slate-300 p-5">5</li>
+    </ul>
+    <br>
+
+    <ul class="group ciao">
+        <li class="bg-slate-300 p-5 group-[.ciao]:bg-green-400">1</li>
+        <li class="bg-slate-300 p-5">2</li>
+        <li class="bg-slate-300 p-5">3</li>
+        <li class="bg-slate-300 p-5">4</li>
+        <li class="bg-slate-300 p-5">5</li>
+    </ul>
+    <br>
+
+    <p class="p-10 empty:bg-green-400"></p>
+    <p class="p-10 empty:bg-green-400 after:content-['*'] after:text-green-400">cose</p>
+    <p class="p-10 empty:bg-green-400 before:content-['*'] before:text-green-400">cose</p>
+
+    <input type="text" class="mb-5 border border-black placeholder:italic placeholder:text-right placeholder:text-red-400" placeholder="inserisci email">
+    <br>
+
+    <div data-nome="Luca" class="p-10 bg-blue-300 data-[nome=Luca]:bg-green-300"></div>
+    <div data-nome="Franco" class="p-10 bg-blue-300 data-[nome=Luca]:bg-green-300"></div>
+
+    
+
+
 
 
 
