--- a/lezione 14 - Modificatori e Pseudoclassi/index.html
+++ b/lezione 14 - Modificatori e Pseudoclassi/index.html
@@ -66,8 +66,12 @@
 
     <div data-nome="Luca" class="p-10 bg-blue-300 data-[nome=Luca]:bg-green-300"></div>
     <div data-nome="Franco" class="p-10 bg-blue-300 data-[nome=Luca]:bg-green-300"></div>
+    <div data-nome="Franco" data-cognome="Stocazzo" class="p-10 bg-blue-300 data-[cognome=Stocazzo]:bg-red-300"></div>
+    <br>
 
-    
+    <div class="p-10 bg-red-300 lg:hover:bg-green-300 "></div>
+
+
 
 
 
